<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinnitus_loudness_dialog_message"
        android:textSize="13sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_ear"
        android:textStyle="bold" />
    <SeekBar
        android:id="@+id/tinnitusRightSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="40" />
    <TextView
        android:id="@+id/tinnitusRightValueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_marginBottom="14dp"
        tools:text="۰ دسی‌بل" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_ear"
        android:textStyle="bold" />
    <SeekBar
        android:id="@+id/tinnitusLeftSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="40" />
    <TextView
        android:id="@+id/tinnitusLeftValueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        tools:text="۰ دسی‌بل" />

</LinearLayout>
